--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>mrwick007</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
   <style>
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      font-family: sans-serif;
+      font-family: 'Orbitron', sans-serif;
     }
 
     body, html {
@@ -95,14 +96,23 @@
 
     .icons {
       display: flex;
-      justify-content: center;
-      gap: 20px;
+      flex-direction: column;
+      gap: 15px;
+      align-items: center;
     }
 
-    .icons img {
-      width: 30px;
-      height: 30px;
-      cursor: pointer;
+    .icons a {
+      color: white;
+      text-decoration: none;
+      font-size: 16px;
+      transition: all 0.3s ease;
+      padding: 5px 10px;
+    }
+
+    .icons a:hover {
+      transform: scale(1.1);
+      background-color: rgba(255, 255, 255, 0.1);
+      border-radius: 5px;
     }
   </style>
 </head>
@@ -114,16 +124,14 @@
     <input id="volume-slider" type="range" min="0" max="1" step="0.01" value="0.2">
   </div>
 
-  <audio id="bg-music" autoplay loop muted>
-    <source src="background.mp3" type="audio/mpeg">
-  </audio>
+  <audio id="bg-music" autoplay loop muted></audio>
 
   <div class="center-box">
     <img src="profile.jpg" alt="Profile" class="profile-pic">
     <h1>mrwick007</h1>
-    <div class="icons" style="flex-direction: column; gap: 10px;">
-      <a href="https://mrwick.my.canva.site/" target="_blank" style="color: white; text-decoration: none; font-size: 16px;">Website</a>
-      <a href="https://x.com/__mrwick__/" target="_blank" style="color: white; text-decoration: none; font-size: 16px;">Twitter</a>
+    <div class="icons">
+      <a href="https://mrwick.my.canva.site/" target="_blank">Website</a>
+      <a href="https://x.com/__mrwick__/" target="_blank">Twitter</a>
     </div>
   </div>
 
@@ -134,13 +142,41 @@
     const bgMusic = document.getElementById('bg-music');
     const volumeSlider = document.getElementById('volume-slider');
 
-    bgMusic.volume = volumeSlider.value;
+    // Only list available songs; others can be added later
+    const songs = ['background.mp3'];
 
+    // Simulate type-delete animation in title only
+    const animatedTitle = "mrwick007";
+    let titleIndex = 0;
+    let typingForward = true;
+
+    function animateTitle() {
+      document.title = animatedTitle.slice(0, titleIndex);
+      if (typingForward) {
+        titleIndex++;
+        if (titleIndex > animatedTitle.length) {
+          typingForward = false;
+          setTimeout(animateTitle, 1000);
+          return;
+        }
+      } else {
+        titleIndex--;
+        if (titleIndex === 0) typingForward = true;
+      }
+      setTimeout(animateTitle, 200);
+    }
+    animateTitle();
+
+    // Audio logic
+    bgMusic.volume = volumeSlider.value;
     volumeSlider.addEventListener('input', function () {
       bgMusic.volume = this.value;
     });
 
     entryScreen.addEventListener('click', () => {
+      const randomSong = songs[Math.floor(Math.random() * songs.length)];
+      bgMusic.src = randomSong;
+      bgMusic.load();
       entryScreen.style.display = 'none';
       centerBox.style.display = 'block';
       audioControl.style.display = 'block';
