--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>mrwick007</title>
+  <title>mrwick</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
   <style>
@@ -128,7 +128,7 @@
 
   <div class="center-box">
     <img src="profile.jpg" alt="Profile" class="profile-pic">
-    <h1>mrwick007</h1>
+    <h1>mr wick</h1>
     <div class="icons">
       <a href="https://mrwick.my.canva.site/" target="_blank">Website</a>
       <a href="https://x.com/__mrwick__/" target="_blank">Twitter</a>
