--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     }
 
     body {
-      background: url('background.mp4') no-repeat center center fixed;
+      background: url('bg1.jpg') no-repeat center center fixed;
       background-size: cover;
     }
 
